# github_label_custom_deployment_check

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
