[package]
name = "app-review-gate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = "0.6.18"
github_webhook_message_validator = "0.1.6"
hyper = "0.14.27"
serde = "1.0.186"
serde_json = "1.0.105"
shuttle-axum = "0.24.0"
shuttle-runtime = "0.24.0"
shuttle-secrets = "0.24.0"
tokio = "1.28.2"
